--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,7 @@ h3.menu-item-title {
 }
 
 /********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
-@media (max-width: 479px) {
+@media (max-width: 477px) {
   /* Header */
   /* Header */
   .navbar-brand {
@@ -618,5 +618,11 @@ h3.menu-item-title {
     margin-bottom: 0;
     line-height: 0.75;
     margin-left: 0px;
+  }
+  .container .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+    box-shadow: 0 0 50px #3f0c1f;
+    border: 2px solid #3f0c1f;
   }
 }
