--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,8 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 80px;
+  width: 100px;
+  font-size: 1em;
   background-color: #557c3e;
   text-align: center;
 }
