Giving a new look

--- a/css/styleD.css
+++ b/css/styleD.css
@@ -1,10 +1,8 @@
-/**   L I T E    M O D E   **/
+/**   D A R K    M O D E   **/
 body {
   font-size: 16px;
-  /*newlook*/
-  color: #61122f;
-  /*newlook*/
-  background-color: white;
+  color: white;
+  background-color: #61122f;
   font-family: "Oxygen", sans-serif;
 }
 
@@ -40,7 +38,6 @@ body {
 
 #jumbotran-main-text hr {
   width: 40%;
-  color: #951c49;
 }
 .navbar-brand h1 {
   /*Restaurant Name*/
@@ -123,8 +120,6 @@ body {
 }
 .panel-footer div.row {
   margin-bottom: 35px;
-  /*newlook*/
-  color: white;
 }
 #hours,
 #address {
@@ -177,7 +172,6 @@ body {
   background-position: center;
 }
 
-/*new look*/
 #jumbotran-main-text,
 #jumbotran-sub-text {
   color: white;
@@ -254,7 +248,6 @@ body {
 }
 .menu-item-tile hr {
   width: 80%;
-  color: #951c49;
 }
 .menu-item-tile .menu-item-price {
   font-size: 1.1em;
@@ -331,6 +324,9 @@ h3.menu-item-title {
   color: white;
 }
 
+#PackSize {
+  color: #61122f;
+}
 /* END SINGLE CATEGORY PAGE */
 /* Start Success Page */
 #success-title {
@@ -340,24 +336,23 @@ h3.menu-item-title {
 
 #quantityofsweetpacks,
 #packsize,
-#pricelabelofsweetpacks {
+#pricelabelofsweetpacks,
+#priceofsweetpacks {
   display: inline-block;
-  color: #61122f;
   width: 150px;
   text-align: left;
-  /*newlook*/
-  border: 1px solid white;
+  border: 1px solid #61122f;
 }
 
 [id^="quantityselected"],
-[id^="PackSize"],
-[id^="priceofsweetpacks"] {
+[id^="PackSize"] {
   color: #61122f;
   width: 80px;
 }
 
 [id^="priceofsweetpacks"] {
-  text-align: right;
+  color: white;
+  width: 80px;
 }
 .btn-primary,
 .btn-primary:hover,
@@ -473,7 +468,6 @@ h3.menu-item-title {
   }
   .panel-footer section hr {
     width: 50%;
-    color: #951c49;
   }
   /* End Footer */
   .navbar-brand h1 {
@@ -637,7 +631,6 @@ h3.menu-item-title {
   }
   .panel-footer section hr {
     width: 50%;
-    color: #951c49;
   }
   /* End Footer */
   /* Home page */
@@ -723,6 +716,5 @@ h3.menu-item-title {
 
   hr {
     width: 60%;
-    color: #951c49;
   }
 }
