--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body {
   background-color: #fdc426;
   border-radius: 0;
   border: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1100;
 }
 
 #logo-img {
