--- a/css/styleD.css
+++ b/css/styleD.css
@@ -11,6 +11,9 @@ body {
   background-color: #fdc426;
   border-radius: 0;
   border: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1100;
 }
 
 #logo-img {
