--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
-/**   D A R K    M O D E   **/
+/**   L I T E    M O D E   **/
 body {
   font-size: 16px;
-  color: white;
-  background-color: #61122f;
+  /*newlook*/
+  color: #61122f;
+  /*newlook*/
+  background-color: white;
   font-family: "Oxygen", sans-serif;
 }
-
+a {
+  padding: 0;
+  margin: 0;
+}
 /**Header**/
 #header-nav {
   background-color: #fdc426;
@@ -21,7 +26,7 @@ body {
 #logo-img {
   background: url("../img/restaurant-logo_medium.jpg") no-repeat;
   height: 100px;
-  width: 190px;
+  width: 140px;
   margin: 10px 15px 10px 0;
 }
 
@@ -43,6 +48,7 @@ body {
 
 #jumbotran-main-text hr {
   width: 40%;
+  color: #951c49;
 }
 .navbar-brand h1 {
   /*Restaurant Name*/
@@ -53,6 +59,7 @@ body {
   text-shadow: 1px 1px 1px #222;
   margin-top: 10;
   margin-bottom: 0;
+
   line-height: 0.75;
 }
 
@@ -125,6 +132,8 @@ body {
 }
 .panel-footer div.row {
   margin-bottom: 35px;
+  /*newlook*/
+  color: white;
 }
 #hours,
 #address {
@@ -160,7 +169,7 @@ body {
 #menu-tile:hover,
 #specials-tile:hover,
 #map-tile:hover {
-  box-shadow: 0 1px 15px 1px #cccccc;
+  box-shadow: 0 1px 15px 1px #3f0c1f;
 }
 
 #menu-tile {
@@ -177,6 +186,7 @@ body {
   background-position: center;
 }
 
+/*new look*/
 #jumbotran-main-text,
 #jumbotran-sub-text {
   color: white;
@@ -258,6 +268,7 @@ body {
 }
 .menu-item-tile hr {
   width: 80%;
+  color: #951c49;
 }
 .menu-item-tile .menu-item-price {
   font-size: 1.1em;
@@ -334,35 +345,34 @@ h3.menu-item-title {
   color: white;
 }
 
-#PackSize {
-  color: #61122f;
-}
 /* END SINGLE CATEGORY PAGE */
 /* Start Success Page */
 #success-title {
   margin-bottom: 50px;
+  margin-top: 50px;
   font-family: "Courier New", Courier, monospace;
 }
 
 #quantityofsweetpacks,
 #packsize,
-#pricelabelofsweetpacks,
-#priceofsweetpacks {
+#pricelabelofsweetpacks {
   display: inline-block;
+  color: #61122f;
   width: 150px;
   text-align: left;
-  border: 1px solid #61122f;
+  /*newlook*/
+  border: 1px solid white;
 }
 
 [id^="quantityselected"],
-[id^="PackSize"] {
+[id^="PackSize"],
+[id^="priceofsweetpacks"] {
   color: #61122f;
   width: 80px;
 }
 
 [id^="priceofsweetpacks"] {
-  color: white;
-  width: 80px;
+  text-align: right;
 }
 .btn-primary,
 .btn-primary:hover,
@@ -478,10 +488,12 @@ h3.menu-item-title {
   }
   .panel-footer section hr {
     width: 50%;
+    color: #951c49;
   }
   /* End Footer */
   .navbar-brand h1 {
     /* Restaurant name */
+    align-items: left;
     padding-top: 10px;
     /* font-size: 5vw;1vw = 1% of viewport width */
   }
@@ -602,7 +614,7 @@ h3.menu-item-title {
 }
 
 /********** Super extra small devices Only :-) (e.g., iPhone 8) **********/
-@media (max-width: 477px) {
+@media (max-width: 478px) {
   /* Header */
   /* Header */
   .navbar-brand {
@@ -611,13 +623,22 @@ h3.menu-item-title {
   }
   .navbar-brand h1 {
     /* Restaurant name */
-    visibility: hidden;
+    /*Restaurant Name*/
+    font-family: "Lora", serif;
+    color: #951c49;
+    font-size: 1.75em;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #222;
+    margin-top: 10;
+    margin-bottom: 0;
+    line-height: 0.75;
+    margin-left: 0px;
   }
   /* Header */
   #logo-img {
     background: url("../img/restaurant-logo_small.jpg") no-repeat;
     height: 79px;
-    width: 150px;
+    width: 100px;
     margin: 0px 15px 10px 0;
   }
   /* End Header */
@@ -641,6 +662,7 @@ h3.menu-item-title {
   }
   .panel-footer section hr {
     width: 50%;
+    color: #951c49;
   }
   /* End Footer */
   /* Home page */
@@ -726,5 +748,6 @@ h3.menu-item-title {
 
   hr {
     width: 60%;
+    color: #951c49;
   }
 }
