--- a/css/styleD.css
+++ b/css/styleD.css
@@ -1,10 +1,8 @@
-/**   L I T E    M O D E   **/
+/**   D A R K    M O D E   **/
 body {
   font-size: 16px;
-  /*newlook*/
-  color: #61122f;
-  /*newlook*/
-  background-color: white;
+  color: white;
+  background-color: #61122f;
   font-family: "Oxygen", sans-serif;
 }
 
@@ -45,7 +43,6 @@ body {
 
 #jumbotran-main-text hr {
   width: 40%;
-  color: #951c49;
 }
 .navbar-brand h1 {
   /*Restaurant Name*/
@@ -128,8 +125,6 @@ body {
 }
 .panel-footer div.row {
   margin-bottom: 35px;
-  /*newlook*/
-  color: white;
 }
 #hours,
 #address {
@@ -165,7 +160,7 @@ body {
 #menu-tile:hover,
 #specials-tile:hover,
 #map-tile:hover {
-  box-shadow: 0 1px 15px 1px #3f0c1f;
+  box-shadow: 0 1px 15px 1px #cccccc;
 }
 
 #menu-tile {
@@ -182,7 +177,6 @@ body {
   background-position: center;
 }
 
-/*new look*/
 #jumbotran-main-text,
 #jumbotran-sub-text {
   color: white;
@@ -264,7 +258,6 @@ body {
 }
 .menu-item-tile hr {
   width: 80%;
-  color: #951c49;
 }
 .menu-item-tile .menu-item-price {
   font-size: 1.1em;
@@ -341,34 +334,35 @@ h3.menu-item-title {
   color: white;
 }
 
+#PackSize {
+  color: #61122f;
+}
 /* END SINGLE CATEGORY PAGE */
 /* Start Success Page */
 #success-title {
   margin-bottom: 50px;
-  margin-top: 50px;
   font-family: "Courier New", Courier, monospace;
 }
 
 #quantityofsweetpacks,
 #packsize,
-#pricelabelofsweetpacks {
+#pricelabelofsweetpacks,
+#priceofsweetpacks {
   display: inline-block;
-  color: #61122f;
   width: 150px;
   text-align: left;
-  /*newlook*/
-  border: 1px solid white;
+  border: 1px solid #61122f;
 }
 
 [id^="quantityselected"],
-[id^="PackSize"],
-[id^="priceofsweetpacks"] {
+[id^="PackSize"] {
   color: #61122f;
   width: 80px;
 }
 
 [id^="priceofsweetpacks"] {
-  text-align: right;
+  color: white;
+  width: 80px;
 }
 .btn-primary,
 .btn-primary:hover,
@@ -484,7 +478,6 @@ h3.menu-item-title {
   }
   .panel-footer section hr {
     width: 50%;
-    color: #951c49;
   }
   /* End Footer */
   .navbar-brand h1 {
@@ -648,7 +641,6 @@ h3.menu-item-title {
   }
   .panel-footer section hr {
     width: 50%;
-    color: #951c49;
   }
   /* End Footer */
   /* Home page */
@@ -734,6 +726,5 @@ h3.menu-item-title {
 
   hr {
     width: 60%;
-    color: #951c49;
   }
 }
