--- a/css/style.css
+++ b/css/style.css
@@ -591,6 +591,7 @@ h3.menu-item-title {
   }
   .menu-item-description {
     text-align: center;
+    padding: 0px;
   }
   .btn-primary,
   .btn-primary:hover,
@@ -619,7 +620,8 @@ h3.menu-item-title {
   }
 
   #add-to-cart-division .btn-primary {
-    margin-left: auto;
+    margin: auto;
+    display: block;
   }
   #check-out-division,
   #back-from-checkout,
@@ -632,14 +634,17 @@ h3.menu-item-title {
   #check-out-division .btn-primary,
   #back-from-checkout .btn-primary,
   #place-order-division .btn-primary {
-    margin-left: 30%;
+    margin: auto;
+    display: block;
   }
   #place-order-division .btn-primary {
-    margin-left: 30%;
+    margin: auto;
+    display: block;
   }
 
   #success-division .btn-primary {
-    margin-left: 30%;
+    margin: auto;
+    display: block;
   }
 }
 
@@ -686,6 +691,7 @@ h3.menu-item-title {
   }
   .menu-item-description {
     text-align: center;
+    padding: 0px;
   }
 
   /* Footer */
@@ -767,18 +773,22 @@ h3.menu-item-title {
 
   #check-out-division .btn-primary,
   #back-from-checkout .btn-primary {
-    margin-left: 23%;
+    margin: auto;
+    display: block;
   }
   #place-order-division .btn-primary {
-    margin-left: 28%;
+    margin: auto;
+    display: block;
   }
 
   #success-division .btn-primary {
-    margin-left: 26%;
+    margin: auto;
+    display: block;
   }
 
   #add-to-cart-division .btn-primary {
-    margin-left: auto;
+    margin: auto;
+    display: block;
   }
   .btn-primary,
   .btn-primary:hover,
