Adding shadows to menu category tiles

--- a/css/style.css
+++ b/css/style.css
@@ -493,6 +493,7 @@ h3.menu-item-title {
 
   #xs-deliver {
     margin-top: 5px;
+    margin-bottom: 20px;
     font-size: 0.7em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -566,6 +567,7 @@ h3.menu-item-title {
 
   #xs-deliver {
     margin-top: 5px;
+    margin-bottom: 20px;
     font-size: 0.7em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -740,6 +742,7 @@ h3.menu-item-title {
 
   #xs-deliver {
     margin-top: 5px;
+    margin-bottom: 20px;
     font-size: 0.7em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
